# quill

./: .gitignore  CHANGELOG.md  QUILL-PRD.html  QUILL-PRD.md  README.md  dialogs.md  editors.md  golden.html  golden.md  issues.html  issues.md  menus.md  pyproject.toml  rel.md  requirements.txt  rtf.html  run-current-build.bat  run-from-source.bat  run-from-source.sh  x2.md  zfix2.html  zfix2.md
.github/: copilot-instructions.md
.github/workflows/: accessibility-ci.yml  copilot-setup-steps.yml  docs-artifacts.yml  github-pages.yml  label-sync.yml  pr-ci.yml  security-ci.yml  windows-release.yml
EdSharp-4.0.1/: Developer.md
_fork-private/: ai-handoff.md  spec-template.md
docs/: CONTROL_REFERENCE.epub  CONTROL_REFERENCE.html  CONTROL_REFERENCE.md  QUILL-PRD.epub  QUILL-PRD.html  QUILL-PRD.md  announcement-beta.epub  announcement-beta.html  announcement-beta.md  assistant-setup.md  beta-feedback-plan.html  beta-feedback-plan.md  quillin-migration-plan.epub  quillin-migration-plan.html  quillin-migration-plan.md  rtf.epub  rtf.md  scripting.epub  scripting.html  scripting.md  userguide.epub  userguide.html  userguide.md  vision-prompt-library-spec.epub  vision-prompt-library-spec.html  vision-prompt-library-spec.md
docs/accessibility/: acr-vpat.epub  acr-vpat.md
docs/engineering/: README.epub  README.md  ai-distribution-recommendations.epub  (+17 more)
installer/: quill.iss
quill/: __init__.py  __main__.py
scripts/: _reqhash.py  build_windows_distribution.py  check_docs_artifacts.py  gen_ink_sounds.py  generate_acr.py  generate_release_artifacts.py  plain_language_lint.py  refresh_glow_wheel.py  release_readiness.py  third_party_notices.py  verify_release_corpus.py
(+284 files in other folders)
