[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "quill"
version = "0.1.1"
description = "Screen-reader-first writing and document environment for Windows"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Blind Information Technology Solutions (BITS)" },
  { name = "Community Access" },
]
dependencies = []

[project.optional-dependencies]
ui = ["wxPython>=4.2.2", "pyttsx3>=2.99"]
spellcheck = ["pyenchant>=3.2"]
dictation = ["SpeechRecognition>=3.10.0"]
pages = ["keynote-parser>=1.0", "markitdown[docx]>=0.3.0"]
dev = [
  "pytest>=8.2",
  "pytest-xdist>=3.6",
  "ruff>=0.6",
  "mypy>=1.11",
]

[project.scripts]
quill = "quill.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["quill"]

[tool.hatch.build.targets.wheel.force-include]
"quill/data/words_alpha.txt" = "quill/data/words_alpha.txt"
"quill/data/words_alpha.LICENSE.txt" = "quill/data/words_alpha.LICENSE.txt"
"quill/data/th_en_US_v2.dat" = "quill/data/th_en_US_v2.dat"
"quill/data/th_en_US_LICENSE.txt" = "quill/data/th_en_US_LICENSE.txt"
"quill/data/th_en_US_WordNet_LICENSE.txt" = "quill/data/th_en_US_WordNet_LICENSE.txt"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
strict_optional = true
check_untyped_defs = true
disallow_untyped_defs = true
exclude = ["quill/ui/"]
